Work on Rmd docs

--- a/docs/inherited-diversity.Rmd
+++ b/docs/inherited-diversity.Rmd
@@ -3,6 +3,7 @@ title: Teams of complementary problem solvers outperform equally skilled individ
 ---
 ```{r inherited-diversity-config, include=FALSE}
 library(knitr)
+library(crotchet)
 opts_chunk$set(echo=FALSE, cache=TRUE)
 chunks_dir <- "R"
 sapply(list.files(chunks_dir, "*.R", full.names = TRUE), read_chunk)
@@ -13,12 +14,12 @@ sapply(list.files(chunks_dir, "*.R", full.names = TRUE), read_chunk)
 # Methods
 
 ```{r gems}
-include_graphics("experiment/landscape.png")
+draw_image("landscape", package = "mountainclimbers")
 ```
 
 ```{r landscape}
-landscape <- readr::read_csv("experiment/simple_hill.csv")
-lattice::wireframe(score ~ x * y, data = landscape)
+data("SimpleHill")
+lattice::wireframe(score ~ x * y, data = SimpleHill)
 ```
 
 # Results
