--- a/docs/inherited-diversity.Rmd
+++ b/docs/inherited-diversity.Rmd
@@ -19,11 +19,74 @@ draw_image("SimpleHillGems", package = "gems")
 
 ```{r landscape}
 data("SimpleHill")
-wireframe(score ~ x * y, data = SimpleHill)
+wireframe(score ~ x * y, data = SimpleHill, xlab = "Orientation", ylab = "Spatial frequency")
 ```
 
-# Results
+# Pilot
 
-# Discussion
+```{r pilot, include=FALSE}
+```
 
-# References
+```{r pilot-scores, fig.width=6}
+ggplot(Pilot) +
+  aes(trial, score) +
+  geom_line(aes(group = interaction(subj_id, run, landscape_ix)),
+            size = 0.1) +
+  geom_line(stat = "summary", fun.y = "mean") +
+  facet_wrap("training_label", scales = "free_x") +
+  t_$theme
+```
+
+```{r pilot-training, fig.width=6}
+PilotTraining <- Pilot %>%
+  filter(training == "training")
+
+ggplot(PilotTraining) +
+  aes(current_x, current_y, color = instructions, linetype = factor(run)) +
+  geom_line(aes(group = interaction(subj_id, run))) +
+  annotate("point", x = 5, y = 5, shape = 4) +
+  annotate("point", x = 50, y = 50, shape = 4) +
+  facet_wrap("subj_id") +
+  t_$scale_x_orientation +
+  t_$scale_y_spatial_frequency +
+  t_$scale_color_instructions +
+  t_$coord_landscape +
+  t_$theme +
+  theme(legend.position = "bottom")
+```
+
+```{r pilot-test, fig.width=10}
+PilotTest <- Pilot %>%
+  filter(training == "test")
+
+ggplot(PilotTest) +
+  aes(current_x, current_y, color = instructions) +
+  geom_line(aes(group = subj_id)) +
+  annotate("point", x = 5, y = 5, shape = 4) +
+  annotate("point", x = 50, y = 50, shape = 4) +
+  facet_wrap("landscape_label", nrow = 1) +
+  t_$scale_x_orientation +
+  t_$scale_y_spatial_frequency +
+  t_$scale_color_instructions +
+  t_$coord_landscape +
+  t_$theme +
+  theme(legend.position = "bottom")
+```
+
+```{r}
+PilotSimpleHill <- filter(PilotTest, landscape_ix == 1)
+
+custom_linetypes <- c(orientation='dot', spatial_frequency='solid')
+
+plot_ly(PilotSimpleHill, x = ~selected_x, y = ~selected_y, z = ~score, color = ~subj_id, type = 'scatter3d',
+        linetype = ~instructions, mode = 'lines+markers', split = "subj_id",
+        opacity = 1, line = list(width = 2), marker = list(size=3), linetypes=custom_linetypes) %>%
+    layout(
+      scene = list(
+        xaxis = list(title = "Orientation"),
+        yaxis = list(title = "Spatial frequency"),
+        zaxis = list(title = "Score"),
+        camera = list(eye = list(x = -1, y = -1, z = 1))
+      )
+    )
+```
