--- a/docs/inherited-diversity.Rmd
+++ b/docs/inherited-diversity.Rmd
@@ -7,10 +7,12 @@ output:
 ```{r inherited-diversity-config, include=FALSE}
 library(knitr)
 library(crotchet)
-opts_chunk$set(echo=FALSE, cache=TRUE, message=FALSE, fig.height=4, fig.width=4)
+opts_chunk$set(echo=FALSE, cache=TRUE, message=FALSE,
+               fig.height=4, fig.width=4)
 chunks_dir <- "R"
 read_chunk(file.path(chunks_dir, "inherited-diversity.R"))
-read_graphviz_chunk("team-structures", package = "gems", new_name = "gems-team-strategies")
+read_graphviz_chunk("team-structures", package = "gems",
+                    new_name = "gems-team-strategies")
 ```
 ```{r inherited-diversity}
 ```
@@ -63,24 +65,55 @@ regardless of the size of the team.
 
 # Methods {-}
 
-```{r gems-team-strategies, engine="dot", out.width="40%"}
+```{r methods}
 ```
 
-```{r gems}
-```
+## Materials
+
+Stimuli consisted of gabor patches that varied in orientation and
+spatial frequency. Orientations were sampled at regular intervals from
+`r methods$min_ori`° to `r methods$max_ori`°. Spatial frequencies were sampled
+at geometric intervals from `r methods$min_sf` cycles/pixel to
+`r methods$max_sf` cycles/pixel. A geometric progression was used to
+make spatial frequency a more perceptually constant dimension by
+expanding the distance between adjacent, high spatial frequency stimuli.
+Sampled orientations and spatial frequencies were combined to create a total of
+`r methods$n_gabors_in_landscape`. A sample of the space is shown in Fig.
+\@ref(fig:gabors).
 
 ```{r gabors, fig.cap="Space of gabors."}
 draw_image("SimpleHillGems", package = "gems")
 ```
 
-```{r training, fig.width=10, fig.height=8}
+## Training conditions
+
+Participants were randomly assigned to one of two training conditions. In the
+orientation condition, participants were instructed that the value of each gem
+was determined by the orientation of the stripes. In the bar width condition,
+participants were instructed the value was determined by the width of the bars.
+The exact instructions are shown in Fig. \@ref(fig:training).
+
+```{r training, fig.width=10, fig.height=4}
 gridExtra::grid.arrange(
-  read_image("welcome_orientation", package = "gems"),
   read_image("training_orientation", package = "gems"),
-  read_image("welcome_spatial_frequency", package = "gems"),
   read_image("training_spatial_frequency", package = "gems"),
-  nrow = 2
+  nrow = 1
 )
+```
+
+## Landscapes
+
+The value of each gem was completely determined by its orientation and spatial
+frequency. We refer to the dimensions of orientation and spatial frequency as
+corresponding to a position on a solution landscape, and its value as the
+height at that point in the landscape. There were two different training
+landscapes, and one test landscape. The training landscapes were constructed so
+that the value of a gem was determined completely by one dimension (either
+orientation or spatial frequency) and not by the other dimension. Values in
+the test landscape were determined by both orientation and spatial frequency.
+The training and test landscapes are shown in Fig. \@ref(fig:landscapes).
+
+```{r landscapes}
 ```
 
 # Results {-}
